amaroK ChangeLog
================
(C) 2002-2005 the amaroK authors.


VERSION 1.2.1:
  ADD: support relative path of tracks in writing playlists iBR 91053)
  FIX: Don't inline-edit tags for the whole playlist's selection.
  FIX: Fix "Recode Tags" crash issues. (BR 95041)
  ADD: "Set Custom Cover" can fetch remote images. (BR 90499)

VERSION 1.2:
  ADD: "Repeat Track" status is reflected by an icon in the playlist.
  ADD: New icons from tightcode for statusbar and repeatTrack.
  ADD: New Smart-Playlist "Ever Played".
  CHG: Bumped GStreamer version requirement to 0.8.4.
  CHG: Made it possible to use artsdsink with GStreamer again.
  CHG: Don't read m3u files recursively when dropping a folder on the
       playlist. No more doubled entries.
  FIX: Shoutcast radio with GStreamer is improved, no more dropouts when
       starting a stream.
  ADD: The "Similar Artists" feature (using Audioscrobbler) can now be
       switched off. (BR 95280)
  FIX: Error in Shoutcast http-request, which made it impossible to play
       many radio streams with GStreamer and aRts. (BR 97211, 98569)
  CHG: Better default directory for selecting a custom cover.
  FIX: ContextBrowser reloads after setting a custom cover. (BR 96548)
  FIX: Cover-Manager's full-screen view works with Bughira (brushed metal).
  ADD: Script-Manager can auto-run scripts on application startup.
  ADD: aKode engine, depends on KDE 3.4. No configure check yet.
  FIX: Don't add non-audio files to the Collection.
  CHG: We now use the SqlLoader, which greatly improves the performance of
       adding stuff to the playlist from SmartPlaylists and the Collection.

VERSION 1.2-beta4:
  ADD: It is now possible to select the right image if there are multiple
       results from Amazon. Patch from Gregory Isabelli <g_isabelli@yahoo.fr>.
       (BR 93287)
  CHG: Reorganized the DCOP interface. We used to have all DCOP functions in the
       "player" group. Now it's splitted up into several categories. Attention